--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
 	<body ng-controller="StoreController as store" >
 		<div ng-repeat="product in store.products">
 			<h1> {{product.name}} </h1>
-			<h2> ${{product.price}} </h2>
+			<h2> {{product.price | currency}} </h2>
 			<p> {{product.description}} </p>
+			<img ng-src="{{product.images[0].full}}"/>
 			<button ng-show="product.canPurchase">Add to Cart</button>
 		</div>
 		<div ng-controller="JewelController as jewel" ng-hide="jewel.ruby.soldOut">
 			<h1> {{jewel.ruby.type}} </h1>
-			<h2> ${{jewel.ruby.price}} </h2>
+			<h2> {{jewel.ruby.price | currency}} </h2>
 			<p> {{jewel.ruby.description}} </p>
+			<img ng-src="{{jewel.ruby.image}}">
 
 		</div>
 		<script type="text/javascript" src="angular.min.js"></script>
