--- a/index.html
+++ b/index.html
@@ -10,20 +10,44 @@
 			<h1 class="text-center">Gemstore</h1>
 			<h2 class="text-center">An Angular Store</h2>
 		</header>
+		
 		<div class="list-group-item" ng-repeat="product in store.products">
 			<h3> 
 				{{product.name}}
 				<em class="pull-right">{{product.price | currency}}</em>
 			</h3>
 			<p> {{product.description}} </p>
-			<img ng-src="{{product.images[0].full}}"/>
-			<button ng-show="product.canPurchase">Add to Cart</button>
-		</div>
-		<div ng-controller="JewelController as jewel" ng-hide="jewel.ruby.soldOut">
-			<h1> {{jewel.ruby.type}} </h1>
-			<h2> {{jewel.ruby.price | currency}} </h2>
-			<p> {{jewel.ruby.description}} </p>
-			<img ng-src="{{jewel.ruby.image}}">
+			<section ng-show="product.images.length">
+				<img ng-src="{{product.images[0].full}}"/>
+				<ul class="list-inline thumbs">
+					<li class="thumbnail" ng-repeat="image in product.images">
+						<img ng-src="{{image}}"/>
+					</li>
+				</ul>
+			</section>
+			
+			<section class="tab" ng-controller="TabController as tab">
+				<ul class="nav nav-pills">
+					<li ng-class="{ active:tab.isSet(1) }">
+						<a href ng-click="tab.setTab(1)">Description</a></li>
+					<li ng-class="{ active:tab.isSet(2) }">
+						<a href ng-click="tab.setTab(2)">Specs</a></li>
+					<li ng-class="{ active:tab.isSet(3) }">
+						<a href ng-click="tab.setTab(3)">Reviews</a></li>
+				</ul>
+				<div ng-show="tab.isSet(1)">
+					<h4>Description</h4>
+					<blockquote></blockquote>
+				</div>
+				<div ng-show="tab.isSet(2)">
+					<h4> Specs </h4>
+					<blockquote>Shine: </blockquote>
+				</div>
+				<div ng-show="tab.isSet(3)">
+					<h4>Reviews</h4>
+					<blockquote></blockquote>
+				</div>
+			</section>
 		</div>
 	</body>
 </html>
